# ferium

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  justfile  makefile  restore_config.py  rustfmt.toml  save_config.py
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.md  feature-request.yml
.github/workflows/: build.yml  build_and_release.yml  release.yml
libium/: CHANGELOG.md  Cargo.toml  README.md
libium/src/: add.rs  iter_ext.rs  lib.rs  scan.rs  version_ext.rs
libium/src/config/: filters.rs  mod.rs  structs.rs
libium/src/modpack/: add.rs  mod.rs
libium/src/modpack/curseforge/: structs.rs
libium/src/modpack/modrinth/: mod.rs  structs.rs
libium/src/upgrade/: check.rs  mod.rs  mod_downloadable.rs  modpack_downloadable.rs
src/: add.rs  cli.rs  download.rs  error.rs  file_picker.rs  main.rs  mutex_ext.rs  readme.rs  tests.rs  unit_tests.rs  util.rs
src/labrinth/: calls.rs  funcs.rs  mod.rs  structs.rs
src/octorok/: calls.rs  funcs.rs  mod.rs  structs.rs
src/subcommands/: add.rs  list.rs  mod.rs  remove.rs  scan.rs  switch.rs  upgrade.rs
src/subcommands/modpack/: add.rs  configure.rs  delete.rs  info.rs  list.rs  mod.rs  switch.rs  upgrade.rs
src/subcommands/profile/: configure.rs  create.rs  delete.rs  export.rs  import.rs  info.rs  list.rs  mod.rs  switch.rs
src/util/: cli.rs  cli.yaml  ferium_error.rs  json.rs  launchermeta.rs  mod.rs  wrappers.rs
testing/: test.json
tests/: integration_tests.rs  util.rs
tests/configs/: empty.json  empty_profile.json  one_profile_full.json  two_modpacks.json  two_modpacks_cfactive.json  two_modpacks_mdactive.json  two_profiles_one_empty.json
tests/scripts/: restore_config.py  save_config.py
