[package]

name = "ferium"
version = "5.0.0"
repository = "https://github.com/gorilla-devs/ferium"
description = "Fast CLI program for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
authors = [
    ## Code
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>", # AUR, Scoop, Homebrew, winget
    "atamakahere (atamakahere-git)",
    "Tuxinal",

    ## Package Management
    "KyleUltimateS",       # AUR
    "ImperatorStorm",      # AUR
    "leo60228",            # Nixpkgs
    "Sofi (soupglasses)",  # Nixpkgs
    "Elsie19",             # Pacstall
    "Julianne (KokaKiwi)", # AUR
    "Loatchi",             # Portage
    "ST-DDT",              # winget
]

license = "MPL-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["minecraft", "mod-manager", "modrinth", "curseforge", "github"]

edition = "2021"
rust-version = "1.80"                   # Bound by `std::sync::LazyLock`
exclude = [".github", "tests", "media"]


[features]
default = ["gui"]

# Replaces the CLI text input with a GUI file dialogue for picking folders
gui = ["libium/gui"]


[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "macos-system-configuration",
    "rustls-tls",
    "http2",
] }
tokio = { version = "1.40", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde_json = "1.0"
indicatif = "0.17"
octocrab = "0.40"
fs_extra = "1.3"
ferinth = "2.11"
colored = "2.1"
futures = "0.3"
inquire = "0.7"
libium = { git = "https://github.com/gorilla-devs/libium", rev = "b80b16412018e11ae7adde0727eb32065a32ddc7" }
# libium = { path = "../libium" }
# libium = "1.32"
anyhow = "1.0"
furse = "1.5"
size = "0.4"

[dev-dependencies]
rand = "0.8"


[profile.release]
codegen-units = 1
strip = true
lto = "fat"
