[workspace]

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
octocrab = "0.44"
ferinth = "2.12"
furse = "1.6"

[package]

name = "ferium"
version = "5.0.0"
repository = "https://github.com/gorilla-devs/ferium"
description = "Fast CLI program for managing Minecraft mods and modpacks from Modrinth, CurseForge, and Github Releases"
authors = [
    ## Code
    "Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>", # AUR, Scoop, Homebrew, winget
    "atamakahere (atamakahere-git)",
    "Tuxinal",

    ## Package Management
    "KyleUltimateS",       # AUR
    "ImperatorStorm",      # AUR
    "leo60228",            # Nixpkgs
    "Sofi (soupglasses)",  # Nixpkgs
    "Elsie19",             # Pacstall
    "Julianne (KokaKiwi)", # AUR
    "Loatchi",             # Portage
    "ST-DDT",              # winget
]

license = "MPL-2.0"
readme = "README.md"
categories = ["command-line-utilities", "games"]
keywords = ["minecraft", "mod-manager", "modrinth", "curseforge", "github"]

edition = "2021"
rust-version = "1.80"                   # Bound by `std::sync::LazyLock`
exclude = [".github", "tests", "media"]


[features]
default = ["gui"]

# Replaces the CLI text input with a GUI file dialogue for picking folders
gui = ["rfd"]


[dependencies]
serde_json.workspace = true
octocrab.workspace = true
ferinth.workspace = true
reqwest.workspace = true
furse.workspace = true
clap.workspace = true

rfd = { version = "0.15", optional = true, default-features = false, features = [
    "xdg-portal",
    "tokio",
] }
tokio = { version = "1.44", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
clap_complete = "4.5"
parking_lot = "0.12"
indicatif = "0.17"
fs_extra = "1.3"
colored = "3.0"
inquire = "0.7"
libium = { path = "./libium" }
anyhow = "1.0"
size = "0.5"

[dev-dependencies]
rand = "0.8"


[profile.release]
codegen-units = 1
strip = true
lto = "fat"
